@@ -4,7 +4,7 @@
         RSS change: Use Notification system. First failed build will shown as warning in Notification Group 'Jenkins Notification'
         instead as balloon over Build Status Summary widget.
     </li>
-
+    <li>#270 Multiline String Parameter Turkish Character Problem</li>
 </ul>
 <h3>0.13.10</h3>
 <ul>
