@@ -18,6 +18,7 @@ import org.powermock.reflect.Whitebox;
 
 import java.io.IOException;
 import java.lang.reflect.Field;
+import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
@@ -48,7 +49,7 @@ public class DefaultSecurityClientTest {
         Assertions.assertThat(parts[0].getName()).isEqualTo("sampleFile.md");
         Assertions.assertThat(parts[1]).isInstanceOf(StringPart.class);
         final String expectedJson = "{\"parameter\":[{\"name\":\"fileParam\",\"file\":\"sampleFile.md\"},{\"name\":\"test\",\"value\":\"Jenkins\"}]}";
-        final StringPart expected = new StringPart("json", expectedJson);
+        final StringPart expected = new StringPart("json", expectedJson, DefaultSecurityClient.CHARSET);
         Assertions.assertThat(parts[1].length()).isEqualTo(expected.length());
     }
 
@@ -66,13 +67,12 @@ public class DefaultSecurityClientTest {
         Assertions.assertThat(parts[0].getName()).isEqualTo("file0");
         Assertions.assertThat(parts[1]).isInstanceOf(StringPart.class);
         final String expectedJson = "{\"parameter\":[{\"name\":\"fileParam\",\"file\":\"file0\"},{\"name\":\"test\",\"value\":\"Jenkins\"}]}";
-        final StringPart expected = new StringPart("json", expectedJson);
+        final StringPart expected = new StringPart("json", expectedJson, DefaultSecurityClient.CHARSET);
         Assertions.assertThat(parts[1].length()).isEqualTo(expected.length());
     }
 
     @Test
-    public void createPostWithOTwoStringParameter() throws IOException {
-        final VirtualFile virtualFile = new MockVirtualFile("sampleFile.md");
+    public void createPostWithTwoStringParameter() throws IOException {
         final List<RequestData> requestData =Lists.list(new StringParameter("test", "Jenkins"),
                 new StringParameter("second", "more"));
         final PostMethod post = securityClient.createPost("http://example.org", requestData);
@@ -84,7 +84,25 @@ public class DefaultSecurityClientTest {
         Assertions.assertThat(parts[0]).isInstanceOf(StringPart.class);
         Assertions.assertThat(parts[0].getName()).isEqualTo("json");
         final String expectedJson = "{\"parameter\":[{\"name\":\"test\",\"value\":\"Jenkins\"},{\"name\":\"second\",\"value\":\"more\"}]}";
-        final StringPart expected = new StringPart("json", expectedJson);
+        final StringPart expected = new StringPart("json", expectedJson, DefaultSecurityClient.CHARSET);
+
+        Assertions.assertThat(parts[0].length()).isEqualTo(expected.length());
+    }
+
+    @Test
+    public void createPostWithParameterIsEncodedAsUTF8() throws IOException {
+        final List<RequestData> requestData =Lists.list(new StringParameter("first", "İstanbul"),
+                new StringParameter("second", "İÖÇŞĞ"));
+        final PostMethod post = securityClient.createPost("http://example.org", requestData);
+        Assertions.assertThat(post.getRequestEntity()).isNotNull();
+        Assertions.assertThat(post.getRequestEntity()).isInstanceOf(MultipartRequestEntity.class);
+        final MultipartRequestEntity multipartRequestEntity = (MultipartRequestEntity) post.getRequestEntity();
+        final Part[] parts = Whitebox.getInternalState(multipartRequestEntity, Part[].class);
+        Assertions.assertThat(parts).hasSize(1);
+        Assertions.assertThat(parts[0]).isInstanceOf(StringPart.class);
+        Assertions.assertThat(parts[0].getName()).isEqualTo("json");
+        final String expectedJson = "{\"parameter\":[{\"name\":\"first\",\"value\":\"İstanbul\"},{\"name\":\"second\",\"value\":\"İÖÇŞĞ\"}]}";
+        final StringPart expected = new StringPart("json", expectedJson, DefaultSecurityClient.CHARSET);
 
         Assertions.assertThat(parts[0].length()).isEqualTo(expected.length());
     }
