@@ -1,5 +1,6 @@
 Version 0.13.11
     * #84 Handle connection exceptions
+    * #270 Multiline String Parameter Turkish Character Problem
 
 Version 0.13.10
     * #253 [Feature Request] Log in progress
